[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashana"
version = "0.2.0"
authors = [
  { name="Gary Stump", email="gstumpjr@gmail.com" },
]
description = "Classes and utilities for storing and quickly retrieving hashes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
zmq = ["zmq"]