[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashana"
dynamic = ["version"]
authors = [
  { name="Gary Stump", email="gstumpjr@gmail.com" },
]
description = "Classes and utilities for storing and quickly retrieving hashes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "hashana.__version__"}

[project.optional-dependencies]
zmq = ["zmq"]